--- a/config.toml
+++ b/config.toml
@@ -16,8 +16,9 @@ baseurl = "https://shaoyiyang.me"
 languageCode = "en-us"
 defaultContentLanguage = "en-us"
 title = "Shao Yiyang's Blog"
+description = "This is Shao Yiyang's Blog"
 theme = "hugo-tranquilpeak-theme"
-disqusShortname = "hugo-tranquilpeak-theme"
+disqusShortname = "Shao Yiyang Blog"
 # googleAnalytics = "UA-123-45"
 paginate = 7
 canonifyurls = true
@@ -31,7 +32,7 @@ canonifyurls = true
 
 [author]
   name = "Shao Yiyang"
-  bio = "3rd Year Computer Science Undergraduate @ **Nanyang Technological University**\n\nIntern Software Engineer @ **Autodesk**"
+  bio = "3rd Year Computer Science Undergraduate @ **Nanyang Technological University**  \nIntern Software Engineer @ **Autodesk**"
   job = "Student"
   location = "Singapore"
   # Your Gravatar email. Overwrite `author.picture` everywhere in the blog
@@ -117,7 +118,7 @@ canonifyurls = true
   # Current image is on AWS S3 and delivered by AWS CloudFront.
   # Otherwise put your image in folder `static/_images/` (development)  or in `source/assets/images/` if you can't or don't want to build the theme,
   # and use relative url : `your-image.png`
-  coverImage = "coffee-laptop.jpg"
+  coverImage = "https://res.cloudinary.com/tinysyy/image/upload/v1485415972/coffee-laptop_qzkzpt.jpg"
 
   # Display an image gallery at the end of a post which have photos variables (false: disabled, true: enabled)
   imageGallery = true
